--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@
 /public/bundles/
 /var/
 /vendor/
-###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+.idea/
+
+/.env
