--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+app.swagger_ui:
+  path: /api/doc
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
+api_login_check:
+  path: /api/login
+  methods: POST
+  defaults: { _controller: lexik_jwt_authentication.jwt_token_authenticator }
