--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,3 +16,5 @@ framework:
         log: true
     serializer:
         name_converter: 'serializer.name_converter.camel_case_to_snake_case'
+
+    validation: { enable_annotations: true }
