--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,6 +30,8 @@ services:
     App\Listener\ExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
+        arguments:
+            $env: "%kernel.environment%"
 
     App\Factory\NormalizerFactory:
         arguments: [!tagged serializer.normalizer]
