--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,6 @@ security:
                 check_path:               /api/login
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
-
         api:
             pattern:   ^/api
             stateless: true
@@ -42,4 +41,5 @@ security:
          - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+         - { path: ^/api/admin, roles: ROLE_ADMIN }
+         - { path: ^/api, roles: ROLE_USER }
